--- a/wp-content/plugins/wordpress-popular-posts/style/wpp.css
+++ b/wp-content/plugins/wordpress-popular-posts/style/wpp.css
@@ -10,8 +10,8 @@ Use the following classes to style your popular posts list as you like.
 }
 
 	.wpp-list li { /* LI - post container */
-		overflow:auto;
-		display:block;
+		/*overflow:auto;*/
+		/*display:block;*/
 		float:none;
 		clear:both;
 	}
