--- a/wp-content/themes/vj/style.css
+++ b/wp-content/themes/vj/style.css
@@ -1298,9 +1298,9 @@ blockquote .quote-sub{color:#bebebe;display:block;font-size:17px;font-style:ital
 .comments .comment-reply-link{float:right;margin:10px 0 0 0;}
 .children .comment:before{content:url(images/icons/comment_child.png);position:absolute;top:0;right:auto;bottom:auto;left:-42px;}
 .comments-content{width:580px;}
-.comment.depth-2{margin-left:45px;}.comment.depth-2 .comments-content{width:502px;}
-.comment.depth-3{margin-left:90px;}.comment.depth-3 .comments-content{width:682px;}
-.comment.depth-4{margin-left:135px;}.comment.depth-4 .comments-content{width:612px;}
+.comment.depth-2{margin-left:45px;}.comment.depth-2 .comments-content{width:508px;}
+.comment.depth-3{margin-left:90px;}.comment.depth-3 .comments-content{width:435px;}
+.comment.depth-4{margin-left:135px;}.comment.depth-4 .comments-content{width:300px;}
 .span9 .comments-content{width:550px;}
 .span9 .comment.depth-2 .comments-content{width:479px;}
 .span9 .comment.depth-3 .comments-content{width:409px;}
@@ -1361,243 +1361,4 @@ section.span9,section.span6,section.span3,aside.span3{margin-top:20px;}
 #copyright-footer #copyright-footer-right .linkedin{background:url(images/social-icons/linkedin.png);width:19px;height:18px;}
 #copyright-footer #copyright-footer-right .flickr{background:url(images/social-icons/flickr.png);width:22px;height:10px;}
 #copyright-footer #copyright-footer-right .youtube{background:url(images/social-icons/youtube.png);width:15px;height:17px;}
-@media (max-width:767px){#copyright-footer #copyright-footer-wrapper{height:auto;} #copyright-footer #copyright-footer-left,#copyright-footer #copyright-footer-right{float:none;} #copyright-footer #copyright-footer-left{margin:10px 0 20px 0;} #copyright-footer #copyright-footer-right{margin:20px 0 10px 0;}}
-#site-footer,#site-footer a{color:#d9eacb;font-size:12px;line-height:23px;}#site-footer h3.widget-title,#site-footer a h3.widget-title{color:#fff;font-size:14px;text-transform:uppercase;margin:0 0 15px 0;}
-#site-footer li ul,#site-footer a li ul{margin:0;padding:0;}
-#site-footer li,#site-footer a li{list-style:none;line-height:23px;}
-.pre-page{margin:20px 0 30px 0;}
-.share-this{margin:-20px 0 55px 0;padding:0 15px;}.share-this>span{display:inline-block;margin:15px 0;}
-.pagination ul>li>a,.pagination ul>li>span{border:none;}
-.pagination ul>li>a:hover,.pagination ul>li>a:focus,.pagination ul>.active>a,.pagination ul>.active>span{background:none;}
-.pagination{border:none;color:#231f20;font-size:12px;}.pagination ul{-webkit-box-shadow:none;-moz-box-shadow:none;box-shadow:none;}
-.pagination li{display:inline-block !important;}.pagination li a.next:before,.pagination li a.prev:before{display:none;}
-.pagination li a{color:#231f20;cursor:pointer;}
-.pagination li .page-numbers{cursor:pointer;position:relative;}.pagination li .page-numbers:before{color:#231f20;content:"/";position:absolute;top:0;right:-5px;bottom:auto;left:auto;z-index:3;padding:4px 3px;}
-.portfolio-filter{margin-bottom:-18px;padding:10px 0;width:100%;-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;}.portfolio-filter .selected-filter{opacity:1;filter:alpha(opacity=100);}
-.portfolio-filter ul{margin:0 0 0 15px;}
-.portfolio-filter li{display:inline;list-style:none;}.portfolio-filter li a,.portfolio-filter li .filter-divider{color:#000;opacity:0.2;filter:alpha(opacity=20);}
-.portfolio-filter li a{-webkit-transition:opacity 0.2s linear;-moz-transition:opacity 0.2s linear;-o-transition:opacity 0.2s linear;transition:opacity 0.2s linear;}.portfolio-filter li a:hover{opacity:1;filter:alpha(opacity=100);text-decoration:none;}
-.portfolio-filter li .filter-divider{cursor:default;margin:0 3px;}
-.portfolio{margin:0 0 0 -2%;padding:0;}.portfolio li{list-style:none;padding:52px 0 0 0;margin:0;}
-.portfolio-single{margin:40px 0 0 0;}.portfolio-single .post-content{margin:0;padding:17px 18px;}
-#portfolio-single .carousel-inner .video-wrapper{padding:0;height:542px;}@media (max-width:979px) and (min-width:768px){#portfolio-single .carousel-inner .video-wrapper{height:417px;}}@media (max-width:767px){#portfolio-single .carousel-inner .video-wrapper{padding-top:25px;padding-bottom:53.25%;height:0;}}
-.portfolio-single-recent{margin:40px 0;}.portfolio-single-recent h3{margin-bottom:30px;}
-.carousel-inner>.item>img,.carousel-inner>.item>a>img{width:100% !important;}
-.carousel-indicators{position:absolute;top:auto;right:auto;bottom:22px;left:50%;margin-left:-22px;z-index:99;}
-.carousel-indicators li{cursor:pointer;}
-.carousel-indicators .active{background-color:#000;}
-.carousel-control{width:33px !important;height:33px !important;margin:0 !important;background:url(images/icons/woo_slider_arrows.png) 13px center no-repeat !important;background-color:#000 !important;border:none;-webkit-border-radius:0;-moz-border-radius:0;border-radius:0;z-index:99;}
-.carousel-control.right{background:url(images/icons/woo_slider_arrows.png) no-repeat -20px center !important;background-color:#000 !important;right:0;}
-.carousel-control.left{left:0;}
-.gallery-caption, .bypostauthor {};
-.isotope .isotope-item{ margin-left: 20px !important; }
-.portfolio-filter li a { padding: 5px 0; position: relative; z-index: 99; }
-.one-column{padding-left:2% !important;width:98%;}
-.two-column{padding-left:2% !important;width:48%;}
-.three-column{padding-left:2% !important;width:31.3%;}
-.four-column{padding-left:2% !important;width:22.9796%;}
-.isotope-item{z-index:2;}
-.isotope-hidden.isotope-item{pointer-events:none;z-index:1;}
-.isotope,.isotope .isotope-item{-webkit-transition-duration:0.8s;-moz-transition-duration:0.8s;-ms-transition-duration:0.8s;-o-transition-duration:0.8s;transition-duration:0.8s;}
-.isotope{-webkit-transition-property:height, width;-moz-transition-property:height, width;-ms-transition-property:height, width;-o-transition-property:height, width;transition-property:height, width;}
-.isotope .isotope-item{-webkit-transition-property:-webkit-transform,opacity;-moz-transition-property:-moz-transform,opacity;-ms-transition-property:-ms-transform,opacity;-o-transition-property:-o-transform,opacity;transition-property:transform, opacity;}
-.isotope.no-transition,.isotope.no-transition .isotope-item,.isotope .isotope-item.no-transition{-webkit-transition-duration:0s;-moz-transition-duration:0s;-ms-transition-duration:0s;-o-transition-duration:0s;transition-duration:0s;}
-.isotope-hidden.isotope-item{pointer-events:none;z-index:1;}
-.rev_slider_wrapper,.rev_slider_wrapper img,.rev_slider{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;max-width:100% !important;}
-.rev_slider_wrapper{margin-bottom:40px;}
-.gallery-icon{overflow:hidden;position:relative;}.gallery-icon:hover .gallery-hover{top:0;}
-.gallery-icon .gallery-hover{position:absolute;top:100%;width:100%;height:100%;-webkit-transition:all 0.2s linear;-moz-transition:all 0.2s linear;-o-transition:all 0.2s linear;transition:all 0.2s linear;}
-@media (max-width:979px){.gallery-item{width:49% !important;height:auto !important;} .gallery-item img{width:100% !important;height:100% !important;} .gallery-item{margin-right:2% !important;} .gallery-item:nth-of-type(2n){margin-right:0 !important;}}@media (max-width:529px){.gallery-item{width:100% !important;height:auto !important;} .gallery-item{margin-right:0 !important;}}
-@media (max-width: 767px) {
-
-	.sticky-menu { display: none !important; } 
-
-	body { padding: 0; } .container { padding-left: 20px; padding-right: 20px } blockquote { padding: 0; } .icons-shortcode, .single-post2 { margin: 15px 0; } }
-
-#site-footer .tagcloud a {
-	-webkit-transition: opacity .2s linear;
-	-moz-transition: opacity .2s linear;
-	-ms-transition: opacity .2s linear;
-	-o-transition: opacity .2s linear;
-	transition: opacity .2s linear;
-}
-
-#site-footer .tagcloud a:hover {
-	opacity: .7;
-}
-
-@media (max-width: 767px) {
-	.wooslider {
-		min-height: 0 !important;
-	}
-
-	#site-footer h3.widget-title {
-		margin-top: 40px;
-	}
-
-	#site-footer .span3:first-of-type h3.widget-title {
-		margin-top: 0;
-	}
-
-	#copyright-footer #copyright-footer-right span {
-		display: none;
-	}
-
-	#copyright-footer #copyright-footer-left, #copyright-footer #copyright-footer-right {
-		text-align: center;
-	}
-
-	.span3.single-post2 {
-		width: 23.5%;
-		margin-left: 2%;
-		float: left;
-	}
-
-	.single-post2 .single-post2-content p {
-		display: none;
-	}
-
-	.google-maps {
-		max-height: 300px;
-	}
-
-	.span3 .btn {
-		margin-bottom: 10px;
-	}
-}
-
-@media (max-width: 586px) { 
-	#logo {
-		float: none;
-		margin: 70px 0 35px 0;
-		text-align: center;
-	}
-
-	#searchform-header {
-		margin: 3px 0 0 0;
-		width: 100%;
-		float: none;
-		position: relative;
-	}
-
-	#searchform-header input[type="text"] {
-		width: 100% !important;
-		padding: 3px 14px !important;
-		box-sizing:border-box;
-		-webkit-transition: none;
-		-moz-transition: none;
-		-ms-transition: none;
-		-o-transition: none;
-		transition: none;
-	}
-
-	#searchform-header input[type="submit"] {
-		position: absolute;
-		right: 0;
-		top: 0;
-	}
-
-	p.line-space {
-		margin: 0;
-		height: 5px;
-	}
-
-	.google-maps {
-		max-height: 200px;
-	}
-
-
-	.nav-tabs li a {
-		margin-right: 0;
-	}
-
-	.nav-tabs li {
-		width: 100%;
-		margin: 0 0 3px 0;	
-	}
-	
-	.nav-tabs li.active {
-		margin: 1px 0 3px 0;
-	}
-
-	.boxed #site-wrapper {
-		margin: 7px auto 5px auto;
-	}
-
-}
-
-@media (max-width: 768px) {
-	#logo {
-		margin-top: -20px;
-	}
-}
-
-@media (max-width: 586px) {
-	#logo {
-		margin-top: 10px;
-		float: right;
-		width: 100%;
-	}
-}
-
-@media (max-width: 567px) {
-	.span3.single-post2 {
-		float: none;
-		display: block;
-		width: 100%;
-		margin-left: 0;
-		-webkit-box-sizing: border-box;
-		-moz-box-sizing: border-box;
-		box-sizing: border-box;
-	}
-
-	.single-post2 .single-post2-content p {
-		display: block;
-	}
-
-}
-
-.logo-box {
-	padding: 0;
-}
-
-.logo-box-row .logo {
-	padding: 0 !important;
-}
-
-.logo-box-row .logo a {
-	display: inline-block;
-	padding: 20px;
-}
-
-.logo-box-row .logo:hover {
-	background: red;
-}
-
-.logo-box-row .logo:hover {
-	background: #ddebcb
-}
-
-
-#lang_sel_list.lang_sel_list_vertical a, #lang_sel_list.lang_sel_list_vertical a:visited,
-#lang_sel_list.lang_sel_list_vertical ul {
-	border: none;
-}
-
-#lang_sel_list.lang_sel_list_vertical,
-#lang_sel_list.lang_sel_list_vertical li {
-	width: 100% !important;
-}
-
-#lang_sel_list.lang_sel_list_vertical a {
-	margin-bottom: 1px;
-	padding: 7px 20px !important;
-}
-
-#lang_sel_list.lang_sel_list_vertical a:hover {
-	color: #000;
-}
-
-#site-nav .nav {
-	margin: 0;
-}
+@media (max-width:767px){#copyright-footer #copyright-f
