--- a/wp-content/themes/vj/custom.css
+++ b/wp-content/themes/vj/custom.css
@@ -15,6 +15,7 @@
 	/*overflow: auto;*/
 	/*height: 200px;*/
 	line-height: 120%;
+	margin-bottom: 20px;
 }
 .article_list_widget .img-outer {
  display: block;
