fixed height of image

--- a/wp-content/themes/vj/custom.css
+++ b/wp-content/themes/vj/custom.css
@@ -21,6 +21,10 @@
  display: block;
  float: left;
  margin-right: 20px;
+
+}
+.article_list_widget .img-outer img {
+	height: 125px;
 }
 .article_list_widget .text-outer {
 	float: left;
